--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -459,3 +459,13 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 // Import global search styles
 
 @import "../common-styles/_bp_global_search";
+
+/**
+*-------------------------------------------------------------------------------
+* @section 12.0 - Register & Media classes
+*-------------------------------------------------------------------------------
+*/
+// Import global magnific popup styles
+
+@import "../common-styles/_bp_magnific";
+
